--- a/about.html
+++ b/about.html
@@ -6,7 +6,8 @@
 <body>
 
 <h1>About me</h1>
-<p>I am very good and i am very honest and hearty person</p>
+<p>I am very good and i am very honest and hearty person and lovely person</p>
+<p>My name is about</p>
 
 </body>
 </html>
